Revert "SCSS: fix overlapping of dropdown-menu"
This reverts commit a3c25223d744b53eb203c33f622990cf6ae24bc1.

--- a/frontend/src/styles/learn.scss
+++ b/frontend/src/styles/learn.scss
@@ -59,7 +59,6 @@ pre.widget {
     white-space: normal;
     padding-bottom: 10px;
     position: relative;
-    overflow: initial;
 }
 
 .tab {
